@@ -1,4 +1,10 @@
 creating ChangeLog
+2002-10-15 David Malcolm
+
+	* cursor.c, global.h, position.c, select.c, xmledit.c
+
+	New line layout implementation
+	
 2002-10-10 David Malcolm
 
 	* global.h, xmledit.c
